<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.category.item.CategoryFragment">

    <TextView
        android:id="@+id/textView4"
        style="@style/text_title3_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="20dp"
        android:text="@string/category_type" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchType"
        style="@style/text_title2_style"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical"
        android:textSize="60sp"
        android:scaleX="0.7"
        android:scaleY="0.7"
        android:elegantTextHeight="false"
        android:textColor="@color/beige"
        android:textOff="@string/expense"
        android:textOn="@string/income"
        android:thumb="@drawable/custom_thumb"
        app:showText="true"
        app:thumbTint="@color/orange"
        app:track="@drawable/custom_track"
        app:trackTint="@color/light_green" />

    <TextView
        android:id="@+id/textView3"
        style="@style/text_title3_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/category_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginHorizontal="10dp"
        app:boxStrokeColor="@color/dark_blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:textColor="@color/dark_blue"
            android:id="@+id/tiedName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:hint="@string/enter_category_name"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        style="@style/text_title2_style"
        android:id="@+id/btnConfirm"
        android:layout_width="190dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:backgroundTint="@color/light_green"
        android:text="@string/save"
        android:textColor="@color/beige" />

</LinearLayout>