<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.transaction.TransactionListFragment">


    <Button
        style="@style/text_title2_style"
        android:id="@+id/btnAddTransaction"
        android:layout_width="265dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:backgroundTint="@color/light_green"
        android:text="@string/new_transaction"
        android:textColor="@color/beige" />

    <ProgressBar
        android:id="@+id/pbTransaction"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleX="0.2"
        android:scaleY="0.2"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp">

        <TextView
            android:id="@+id/textView3"
            style="@style/text_title3_style"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/category" />

        <TextView
            android:id="@+id/textView4"
            style="@style/text_title3_style"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/date" />

        <TextView
            android:id="@+id/textView5"
            style="@style/text_title3_style"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/amount" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTransactionList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/rv_transaction_list" />

</LinearLayout>