<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".presentation.dashboard.DashboardFragment">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchMode"
        style="@style/text_title2_style"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/beige"
        android:textOff="@string/expense"
        android:textOn="@string/income"
        android:textSize="40sp"
        android:thumb="@drawable/custom_thumb"
        app:showText="true"
        app:thumbTint="@color/orange"
        app:track="@drawable/custom_track"
        app:trackTint="@color/light_green" />

    <TextView
        android:id="@+id/tvTotalAmount"
        style="@style/text_title1_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/amount" />

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pieChart"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="20dp" />

    <TextView
        android:id="@+id/textView2"
        style="@style/text_title4_style"
        android:layout_gravity="start"
        android:layout_marginStart="40dp"
        android:layout_marginVertical="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categories" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvDashboard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="10dp"
        tools:listitem="@layout/rv_dashboard" />

    <ProgressBar
        android:id="@+id/pbDashboard"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleX="0.2"
        android:scaleY="0.2"
        android:visibility="gone" />

</LinearLayout>