<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    android:orientation="vertical"
    tools:context=".presentation.category.CategoryListFragment">

    <Button
        style="@style/text_title2_style"
        android:id="@+id/btnNewTransaction"
        android:layout_width="225dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:backgroundTint="@color/light_green"
        android:text="@string/new_category"
        android:textColor="@color/beige" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView3"
            style="@style/text_title3_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:text="@string/category" />

        <TextView
            android:id="@+id/textView4"
            style="@style/text_title3_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:text="@string/type" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pbCategory"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCategoryList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        tools:listitem="@layout/rv_category_list" />

</LinearLayout>